# cortexSDR

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  README.md.decompressed  README.md.sdr  README.sdr  README_decoded.md  analyze_sdr_size.cpp  build.sh  build_desktop.sh  build_firmware.sh  build_library.sh  build_python.sh  calculate_error.cpp  check_onnx.py  checkpoint.md  compressed_cnn.json  cortexSDR  cortexSDR.cpp  firmware_config.cmake  gpt2_text_generation_output.txt  inspect_sdr.cpp  onnxruntime-linux-x64-gpu-1.21.1.tgz.1  organize.sh  package.json  test  test_c_api.c  test_decoded.txt  test_gpt2_compression.py  test_input.txt  test_model_performance.py  test_onnx_model.py  test_output.txt
.github/workflows/: build-sdk-release.yml  sdk_release.yml
benchmarks/: README.md  suite.example.json  suite.qwen_inference.json
build_desktop/: CMakeCache.txt  Makefile  cmake_install.cmake  cortexsdr_ai_compression_cli  cortexsdr_cli  cortexsdr_desktop  cortexsdr_model_converter  test_c_api
build_desktop/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_desktop/cortexsdr_ai_compression_cli_autogen/: deps
build_desktop/cortexsdr_autogen/: deps  mocs_compilation.cpp
build_desktop/cortexsdr_cli_autogen/: deps
build_desktop/cortexsdr_desktop_autogen/: deps  mocs_compilation.cpp
build_desktop/cortexsdr_model_converter_autogen/: deps
build_desktop/cortexsdr_sdk_autogen/: deps
build_desktop/cortexsdr_sdk_shared_autogen/: deps
build_desktop/test/: Makefile  cmake_install.cmake  test_compressed_inference  test_gpt2_text_generation
build_desktop/test/test_compressed_inference_autogen/: deps
build_desktop/test/test_gpt2_text_generation_autogen/: deps
build_desktop/test_c_api_autogen/: deps
cmake/: FindONNXRuntime.cmake  FindTensorFlow.cmake  Findnlohmann_json.cmake  cortexsdrConfig.cmake.in
docs/: ACHIEVEMENTS.md  CortexSDR_SDK_Documentation.md  GOALS.md  PLAN.md  SDK_USAGE.md  TECHNICAL_ASSESSMENT.md  TECHNICAL_PAPER_DOCUMENTATION.md  cli_text_generation.md  cli_usage.md  cortexsdr_paper.tex  huggingface_to_torchscript_guide.md  plan.md  references.bib
docs/ai_compression/: README.md  compression_strategies.md
examples/library_usage/: CMakeLists.txt  build.sh  main.cpp
examples/sdk_usage/: multipart_compression_example.cpp  sdk_example.cpp
firmware/: CMakeLists.txt  README.md  build_test.sh
firmware/build_test/: standalone_resource_monitor_test
firmware/config/: firmware_config.cmake
firmware/include/: cortex_firmware.h  cortex_resource_monitor.h  cortex_resource_monitor_impl.h
firmware/src/: cortex_firmware.cpp  cortex_resource_monitor.cpp  cortex_resource_monitor_impl.cpp  cortex_resource_monitor_test.cpp  firmware_main.cpp  standalone_resource_monitor_test.cpp
include/: cortex_sdk_export.h
python/: CMakeLists.txt  README.md  cortex_compression.pyx  cortexsdr.cpp  example.py  pyproject.toml  setup.py
python/cortexsdr_sdk/: __init__.py  _bindings.cpp
python/cortexsdr_sdk/tests/: test_basic.py
research/step0/: .gitignore  README.md  requirements.txt
research/step0/common/: __init__.py  eval.py  metrics.py  model_io.py
research/step0/exp_a_codes/: codes.py  dictionary.py  sweep.py
research/step0/exp_a_v2_binary/: sweep.py  variants.py
research/step0/exp_a_v3_combined/: combined.py  sanity.py  sweep.py
research/step0/exp_b1_perplexity/: swap.py
research/step0/exp_b2_adaptive/: swap.py
research/step0/exp_b3_scaled/: swap.py
research/step0/exp_b_dict/: sweep.py
research/step0/exp_c1_tile_size/: sweep.py
research/step0/exp_c2_hybrid/: swap.py
research/step0/exp_c_kernel/: benchmark.py
research/step0/exp_d1_full_scaling/: swap.py
research/step0/exp_d2_storage/: analyze.py
research/step0/results/: STEP0_REPORT.md
scripts/: clone_mistral.py  convert_to_torch_archive.py  download-images.js  download_onnx_models.py  download_onnx_models_simple.py  download_pretrained_onnx.py  hf_to_torchscript.py  make_test_onnx.py  setup_homebrew_tap.sh
sdr_core/: cli_main.cpp  cortexSDR.cpp  cortexSDR.hpp  debug_utils.hpp  firmware_main.cpp  rle.cpp
sdr_core/encoders/media/: ImageEncoding.cpp  ImageEncodingHiFi.hpp  VideoEncoding.cpp
sdr_core/encoders/numeric/: GeoEncoding.cpp  NumberEncoding.cpp
sdr_core/encoders/text/: WordEncoding.cpp
src/: CharacterEncoding.hpp  SDRWindow.cpp  SDRWindow.hpp  ai_compression_cli.cpp  bench_hsdr_fit_speed.cpp  cli_main.cpp  cortexSDR.cpp  cortexSDR.hpp  cortexsdr_bench.cpp  cortexsdr_cli.cpp  firmware_main.cpp  model_converter_cli.cpp  rle.cpp  rle.hpp  test.cpp  test.pro  test_c_api.cpp  test_hsda_reader.cpp  test_hsdr_archive_e2e.cpp  test_hsdr_dtypes.cpp  test_hsdr_kquants.cpp  test_hsdr_pipeline.cpp  test_hsdr_pipeline_disk.cpp  test_hsdr_protection.cpp  test_hsdr_roundtrip.cpp  test_hsdr_shared_dict.cpp  test_inference_matmul_routing.cpp  todo.md  tool_sdr_inspect.cpp
src/ai_compression/: LLMTokenizer.cpp  LLMTokenizer.hpp  README.md  SparseInferenceEngine.cpp  SparseInferenceEngine.hpp
src/ai_compression/api/: c_api.cpp  c_api.hpp  cortex_sdk.cpp  cortex_sdk.h  cortex_sdk_export.h
src/desktop_app/: AudioInferenceWidget.cpp  AudioInferenceWidget.h  BenchmarkWidget.cpp  BenchmarkWidget.h  CMakeLists.txt  ChatWidget.cpp  ChatWidget.h  CompressionWidget.cpp  CompressionWidget.h  InferenceWidget.cpp  InferenceWidget.h  MainWindow.cpp  MainWindow.h  ModelManager.cpp  ModelManager.h  PerformanceMonitor.cpp  PerformanceMonitor.h  ResultsWidget.cpp  ResultsWidget.h  TextGenerationWidget.cpp  TextGenerationWidget.h  main.cpp
src/encoders/: AudioEncoding.cpp  AudioEncoding.hpp  CharacterEncoding.cpp  CharacterEncoding.hpp  DateTimeEncoding.cpp  DateTimeEncoding.hpp  ImageEncoding.cpp  ImageEncoding.hpp  NumberEncoding.cpp  NumberEncoding.hpp  SpecialCharacterEncoding.cpp  SpecialCharacterEncoding.hpp  VideoEncoding.cpp  VideoEncoding.hpp  WordEncoding.cpp  WordEncoding.hpp  special_character_encoder.hpp
test/: CMakeLists.txt  test.cpp  test_compressed_inference.cpp  test_gpt2_text_generation.cpp  test_image_encoding  test_image_encoding.cpp
(+96 files in other folders)
